[tool.poetry]
name = "gfr"
version = "0.1.0"
description = "Git Flow Assistant of Rahmasir"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"

[tool.poetry.scripts]
ggg = "gfr.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
